--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,13 +2,13 @@
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
+WORKDIR ../app
 
-COPY requirements.txt .
+COPY ../requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-COPY . .
+COPY ../shop_project .
 EXPOSE 8000
+WORKDIR /shop_project
 
-RUN chmod +x start_app.sh
-CMD ["./start_app"]
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
